==> IoT-Lab-Minden/smock/src/rfid/MFRC522.cpp <==
#include "MFRC522.h"
#include "../energia/SPI.h"
#include "driverlib/rom.h"
#include "MFRC522Constants.h"
#include "../energia/avr/pgmspace.h"

	void MFRC522::writeRegister(uint8_t reg, uint8_t value) {
		// select device
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, 0);
		SPI.transfer(reg & 0x7E);							// write command address format:  r(1)/w(0) a5 a4 a3 a2 a1 RFU(0)  with a5 as address page and a4 - a1 as register address
		SPI.transfer(value);
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, SS_PIN);
	}

	void MFRC522::writeRegister(uint8_t reg, uint8_t count, uint8_t *values) {
		ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, 0);
		SPI.transfer(reg & 0x7E);
		for (uint8_t index = 0; index < count; index++) {
			SPI.transfer(values[index]);
		}
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, SS_PIN);
	}

	uint8_t MFRC522::readRegister(uint8_t reg) {
		uint8_t value;
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, 0);
		SPI.transfer(0x80 | (reg & 0x7E));
		value = SPI.transfer(0);
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, SS_PIN);
		return value;
	}

	void MFRC522::readRegister(PCD_Register reg, uint8_t count, uint8_t *values, uint8_t rxAlign) {
		if (count == 0) {
			return;
		}
		uint8_t address = 0x80 | (reg & 0x7E);
		uint8_t index = 0;

	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, 0);
		count--;
		SPI.transfer(address);
		while (index < count) {
			if (index == 0 && rxAlign) {
				uint8_t mask = 0;
				for (uint8_t i = rxAlign; i <= 7; i++) {
					mask |= (1 << i);
				}
				// Read value and tell that we want to read the same address again.
				uint8_t value = SPI.transfer(address);
				// Apply mask to both current value of values[0] and the new data in value.
				values[0] = (values[index] & ~mask) | (value & mask);
			}
			else { // Normal case
				values[index] = SPI.transfer(address);	// Read value and tell that we want to read the same address again.
			}
			index++;
		}
		values[index] = SPI.transfer(0);
	    ROM_GPIOPinWrite(SS_PIN_BASE, SS_PIN, SS_PIN);
	}

	uint8_t MFRC522::isNewCardPresent() {
		uint8_t bufferATQA[2];
		uint8_t bufferSize = sizeof(bufferATQA);
		StatusCode result = REQA_or_WUPA(PICC_CMD_REQA, bufferATQA, &bufferSize);
		return (result == STATUS_OK || result == STATUS_COLLISION);
	}

	StatusCode MFRC522::communicateWithPICC(uint8_t command, uint8_t waitIRq, uint8_t *sendData, uint8_t sendLen, uint8_t *backData, uint8_t *backLen, uint8_t *validBits, uint8_t rxAlign, bool checkCRC) {
		uint8_t n, _validBits;
		unsigned int i;

		// Prepare values for BitFramingReg
		uint8_t txLastBits = validBits ? *validBits : 0;
		uint8_t bitFraming = (rxAlign << 4) + txLastBits;

		writeRegister(CommandReg, PCD_Idle);			// Stop any active command.
		writeRegister(ComIrqReg, 0x7F);					// Clear all seven interrupt request bits
		setRegisterBitMask(FIFOLevelReg, 0x80);			// FlushBuffer = 1, FIFO initialization
		writeRegister(FIFODataReg, sendLen, sendData);	// Write sendData to the FIFO
		writeRegister(BitFramingReg, bitFraming);		// Bit adjustments
		writeRegister(CommandReg, command);				// Execute the command
		if (command == PCD_Transceive) {
			setRegisterBitMask(BitFramingReg, 0x80);	// StartSend=1, transmission of data starts
		}

		i = 2000;
		while (1) {
			n = readRegister(ComIrqReg);	// ComIrqReg[7..0] bits are: Set1 TxIRq RxIRq IdleIRq HiAlertIRq LoAlertIRq ErrIRq TimerIRq
			if (n & waitIRq) {					// One of the interrupts that signal success has been set.
				break;
			}
			if (n & 0x01) {						// Timer interrupt - nothing received in 25ms
				return STATUS_TIMEOUT;
			}
			if (--i == 0) {						// The emergency break. If all other conditions fail we will eventually terminate on this one after 35.7ms. Communication with the MFRC522 might be down.
				return STATUS_TIMEOUT;
			}
		}

		// Stop now if any errors except collisions were detected.
		uint8_t errorRegValue = readRegister(ErrorReg); // ErrorReg[7..0] bits are: WrErr TempErr reserved BufferOvfl CollErr CRCErr ParityErr ProtocolErr
		if (errorRegValue & 0x13) {	 // BufferOvfl ParityErr ProtocolErr
			return STATUS_ERROR;
		}

		// If the caller wants data back, get it from the MFRC522.
		if (backData && backLen) {
			n = readRegister(FIFOLevelReg);			// Number of uint8_ts in the FIFO
			if (n > *backLen) {
				return STATUS_NO_ROOM;
			}
			*backLen = n;											// Number of uint8_ts returned
			readRegister(FIFODataReg, n, backData, rxAlign);	// Get received data from FIFO
			_validBits = readRegister(ControlReg) & 0x07;		// RxLastBits[2:0] indicates the number of valid bits in the last received uint8_t. If this value is 000b, the whole uint8_t is valid.
			if (validBits) {
				*validBits = _validBits;
			}
		}

		// Tell about collisions
		if (errorRegValue & 0x08) {		// CollErr
			return STATUS_COLLISION;
		}

		// Perform CRC_A validation if requested.
		if (backData && backLen && checkCRC) {
			// In this case a MIFARE Classic NAK is not OK.
			if (*backLen == 1 && _validBits == 4) {
				return STATUS_MIFARE_NACK;
			}
			// We need at least the CRC_A value and all 8 bits of the last uint8_t must be received.
			if (*backLen < 2 || _validBits != 0) {
				return STATUS_CRC_WRONG;
			}
			// Verify CRC_A - do our own calculation and store the control in controlBuffer.
			uint8_t controlBuffer[2];
			StatusCode status = calculateCRC(&backData[0], *backLen - 2, &controlBuffer[0]);
			if (status != STATUS_OK) {
				return status;
			}
			if ((backData[*backLen - 2] != controlBuffer[0]) || (backData[*backLen - 1] != controlBuffer[1])) {
				return STATUS_CRC_WRONG;
			}
		}

		return STATUS_OK;
	}

	StatusCode MFRC522::calculateCRC(uint8_t *data, uint8_t length, uint8_t *result) {
		writeRegister(CommandReg, PCD_Idle);		// Stop any active command.
		writeRegister(DivIrqReg, 0x04);				// Clear the CRCIRq interrupt request bit
		setRegisterBitMask(FIFOLevelReg, 0x80);		// FlushBuffer = 1, FIFO initialization
		writeRegister(FIFODataReg, length, data);	// Write data to the FIFO
		writeRegister(CommandReg, PCD_CalcCRC);		// Start the calculation

		word i = 5000;
		uint8_t n;
		while (1) {
			n = readRegister(DivIrqReg);	// DivIrqReg[7..0] bits are: Set2 reserved reserved MfinActIRq reserved CRCIRq reserved reserved
			if (n & 0x04) {						// CRCIRq bit set - calculation done
				break;
			}
			if (--i == 0) {						// The emergency break. We will eventually terminate on this one after 89ms. Communication with the MFRC522 might be down.
				return STATUS_TIMEOUT;
			}
		}
		writeRegister(CommandReg, PCD_Idle);		// Stop calculating CRC for new content in the FIFO.

		// Transfer the result from the registers to the result buffer
		result[0] = readRegister(CRCResultRegL);
		result[1] = readRegister(CRCResultRegH);
		return STATUS_OK;
	}

	uint8_t MFRC522::readCardSerial() {
		StatusCode result = select_PICC(&uid);
		return (result == STATUS_OK);
	}
